--- a/flutter-hms-availability/android/build.gradle
+++ b/flutter-hms-availability/android/build.gradle
@@ -26,6 +26,10 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 33
     buildToolsVersion "31.0.0"
+
+    if (project.android.hasProperty("namespace")) {
+        namespace 'com.huawei.hms.flutter.hmsavailability'
+    }
     
     defaultConfig {
         minSdkVersion 19
